--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  background-color: whitesmoke;
 }
 
-.App-link {
-  color: #61dafb;
+.grid-container {
+  align-items: center;
+  justify-content: center;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 20px;
+  padding: 15px;
+  box-sizing: border-box;
+  box-shadow: 1px 2px 2px 3px;
+  background-color: rgb(161, 141, 161);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cell {
+  background-color: white;
+  width: 100px;
+  box-sizing: border-box;
+  height: 5rem;
+  text-align: center;
+  align-items: center;
+  font-size: 60px;
+  font-weight: 500;
+  cursor: pointer;
+  user-select: none;
+}
+
+.top-display {
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 3px;
+}
+
+.bottom-display {
+  font-size: 20px;
+  text-align: center;
+  margin-top: 3px;
+}
+
+button {
+  justify-content: center;
+  font-size: 20px;
+  align-items: center;
+  text-align: center;
 }
